css/app.css
body {
  background-color: #606060;
}

*, h4, h5, h6, p {
  font-family: 'Droid Serif', sans-serif;
  color: black;
}

h1, h2, h3 {
  font-family: 'Oswald', sans-serif;
  color: black;
}

a, a:active, a:focus {
  color: red;
}

a:hover {
  color: #E70000;
}

button, .button {
  background-color: red;
  font-family: 'Droid Serif';
}

button:hover, .button:hover {
  background-color: #E70000;
}

button:focus {
  background-color: #E70000;
}

button.postfix:focus {
  background-color: #E70000;
}

.bold {
  font-weight: bold;
}

.large {
  font-size: 1.2rem;
}

.small {
  font-size: .8rem;
}

.grey {
  color: #4d4e51;
}

.black {
  color: black;
}

.white {
  color: white;
}

a.black {
  text-decoration: underline;
  color: black;
}

a.black:hover {
  color: #757575;
}

a.white {
  text-decoration: underline;
  color: white;
}

a.white:hover {
  color: #EDEDED;
}

.float-right {
  float: right;
}

.float-left {
  float: left;
}

.align-right {
  text-align: right;
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.cursor-pointer {
  cursor: pointer;
}

.cursor-pointer:hover {
  cursor: pointer;
}

.underline {
  text-decoration: underline;
}

.validation input.ng-valid, .validation select.ng-valid {
  background-color: #e6fdeb;
}

.validation input.ng-touched.ng-invalid, .validation select.ng-touched.ng-invalid {
  background-color: #faede7;
}

fieldset legend {
  background: none;
}

.switch {
  height: 2rem;
}

#splash {
  padding-top: 3rem;
  padding-bottom: 6rem;
  margin-top: -32px;
}

#layer1, #layer2 {
  z-index: -10;
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
}

#card {
  margin-left: -30px;
}

@media (max-width: 1360px) {
  .wow {
    display: none;
  }
}

#icons {
  margin-top: 2rem;
}

#icons img {
  max-height: 6rem;
}

#logo {
  margin-top: 0.5rem;
}

#logo img {
  height: 5rem;
}

#date {
  margin-top: 0rem;
}

#date h2 {
  font-size: 1.2rem;
}

#updates {
  margin-top: 2rem;
}

button.apply {
  width: 100%;
  font-family: 'Oswald';
  text-transform: uppercase;
  font-size: 1.5rem;
}

#login {
  background: red;
  width: 90vw;
  z-index: 10;
  position: absolute;
  top: 10rem;
  left: 5vw;
  padding: 1rem 0.75rem 0rem 0.75rem;
}

#login .switch {
  position: absolute;
  top: 1.8rem;
  right: 1rem;
  text-decoration: underline;
}

#login .switch {
  color: white;
}

#login h2 {
  text-transform: uppercase;
  color: white;
}

#login label {
  color: white;
}

#login input {
  background: rgba(0, 0, 0, 0.3);
  border: none;
  box-shadow: none;
  color: white;
}

#login button {
  background: rgba(0, 0, 0, 0.3);
  width: 100%;
  font-family: 'Oswald';
  text-transform: uppercase;
}

#login button span {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: 20vw;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
  padding: 0.9rem;
}

#login button span i {
  color: white;
  font-size: 1.5rem;
}

@media (min-width: 700px) {
  #login {
    width: 700px;
    margin: auto;
    left: 50%;
    margin-left: -350px;
  }

  #login button span {
    width: 100px;
  }
}

#login *:focus {
  outline: 0;
}

#login input::selection {
  background: #404040;
}

#login::-moz-selection {
  background: #404040;
}

#login *::-webkit-input-placeholder {
   color: rgba(0, 0, 0, 0.3);
}

#login *:-moz-placeholder { /* Firefox 18- */
   color: rgba(0, 0, 0, 0.3);
}

#login *::-moz-placeholder {  /* Firefox 19+ */
   color: rgba(0, 0, 0, 0.3);
}

#login *:-ms-input-placeholder {
   color: rgba(0, 0, 0, 0.3);
}

.dark-section {
  background-color: #231F20;
  color: white;
  padding-top: 2rem;
  padding-bottom: 2rem;
  border-top: 2px solid red;
  border-bottom: 2px solid red;
  margin-top: -2px
}

.dark-section h1,
.dark-section h2,
.dark-section h3,
.dark-section h4,
.dark-section h5,
.dark-section h6,
.dark-section p,
.dark-section label {
  color: white;
}

.light-section {
  background-color: #FAFAFA;
  color: #231F20;
  padding-top: 2rem;
  padding-bottom: 2rem;
  border-top: 2px solid red;
  border-bottom: 2px solid red;
  margin-top: -2px;
}

.light-section h1,
.light-section h2,
.light-section h3,
.light-section h4,
.light-section h5,
.light-section h6,
.light-section p {
  color: #231F20;
}

#mlh-trust-badge {
  visibility: hidden;
}

footer#site-footer {
  text-align: center;
  background-color: #FAFAFA;
  height: 7rem;
  overflow: hidden;
}

footer#site-footer * {
  float: left;
  height: 4rem;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
}

footer#site-footer #hacksu-logo {
  height: 5.5rem;
}

footer#site-footer p {
  font-family: 'Oswald';
  line-height: 4rem;
}

footer#site-footer .container {
  width: 340px;
  margin: auto;
  float: none;
}

@media (min-width: 0px) and (max-width: 600px) {
  #date h2 {
    font-size: 1.5rem;
  }
}

@media (min-width: 601px) and (max-width: 1024px) {
  #logo {
    margin-top: 1.5rem;
  }

  #date {
    margin-top: 1rem;
  }

  #date h2 {
    font-size: 1.8rem;
  }
}

@media (min-width: 1025px) {
  #logo {
    margin-top: 2rem;
  }

  #date {
    margin-top: 1.5rem;
  }

  #date h2 {
    font-size: 2.2rem;
  }

  #mlh-trust-badge {
    visibility: visible;
  }
}

